# pyproject.toml
[tool.black]
line-length = 120
target-version = ["py38"]

[build-system]
requires = ["setuptools==78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steerlab_tt"
version = "0.1.0"
description = "Démo d'entretien"
readme = "README.md"
requires-python = "==3.11.0"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
